--- a/templates/pages/accordeoniste_soiree.html.twig
+++ b/templates/pages/accordeoniste_soiree.html.twig
@@ -50,7 +50,7 @@ drift.load('beeybihz4kn4');
 		</div>
 	</section>
 
-	<section class="flash-ghost flash-ghost--limited"></section>
+	<section class="flash-ghost flash-ghost--limited" style="height: 350px !important;"></section>
 
 	<section class="content-section bg--blank page-section">
 		<div class="container">
@@ -59,34 +59,36 @@ drift.load('beeybihz4kn4');
 			<div class="row">
 				<div class="col-md-6">
 					<p>
-						Vous êtes à la recherche d'un <strong>accordéoniste pour animer votre soirée</strong> ? <a href="{{ path('animations_mariages') }}">Mariage</a>, fête entre amis sur le <a href="{{ path('guinguette') }}">thème "<i>Guinguette</i>"</a>, anniversaire, cocktail d'entreprise.. Les occasions sont nombreuses pour inviter un musicien, et l'accordéon s'adaptera facilement à tout type d'événement. Même si la tentation de réserver un <a href="{{ path('musiciens_soirees') }}">groupe de musique pour votre soirée</a> est souvent grande, les conditions ne sont parfois pas réunies pour pouvoir le faire (taille du lieu, considérations techniques, budget...).
+						Vous êtes à la recherche d'un <strong>accordéoniste pour animer votre soirée</strong> ? Cocktail d'entreprise, <a href="{{ path('animations_mariages') }}" style="color: #555555;">mariage</a>, fête entre amis sur le <a style="color: #555555;" href="{{ path('guinguette') }}">thème "<i>Guinguette</i>"</a>, anniversaire... Les occasions sont nombreuses pour inviter un musicien, et l'accordéon s'adaptera facilement à tout type d'événement. Même si la tentation de réserver un <a style="color: #555555;" href="{{ path('musiciens_soirees') }}">groupe de musique pour votre soirée</a> est souvent grande, les conditions ne sont parfois pas réunies pour pouvoir le faire (taille du lieu, considérations techniques, budget...).
 					</p>
 
 					<p>
-						Pourquoi alors ne pas choisir d'accueillir un <strong>accordéoniste en solo</strong> ? L'accordéon est en effet un instrument riche et complet, tout à fait adapté pour l'animation musicale de votre soirée. Grâce à mes années de pratique, j'ai pu développer un répertoire dense et varié, qui me permet de vous proposer aujourd'hui une belle palette de <strong>styles musicaux</strong>. Des standards de jazz à la chanson française, en passant par la musique brésilienne ou le tango argentin, il y en aura pour tous les goûts !
-					</p>
-
-					<p>
-						Avec une formule en solo, l'organisation de votre événement est grandement simplifiée ; les conditions techniques sont réduites au minimum, et il n'y a pas besoin de sonorisation la plupart du temps. Si cela s'avère nécessaire, je suis autonome et possède mon propre matériel de diffusion. L'espace nécessaire se résume à une chaise, qui peut se déplacer au cours de la soirée afin d'animer différents espaces.. (<i>Attention, je joue uniquement assis et ne propose donc pas de déambulation à proprement parler.</i>)
+						Pourquoi alors ne pas choisir d'accueillir un <strong>accordéoniste en solo</strong> ? L'accordéon est en effet un instrument riche et complet, tout à fait adapté pour l'animation musicale de votre soirée. Grâce à mes années de pratique et mon <strong>expérience dans l'événementiel</strong>, j'ai pu développer un répertoire dense et varié, qui me permet de vous proposer aujourd'hui une belle palette de <strong>styles musicaux</strong>. Standards de jazz, classiques de la chanson française, swing des années 50 ; il y en a pour tous les goûts, et toutes les ambiances.
 					</p>
 				</div>
 
 				<div class="col-md-6">
-					<img class="img-fluid" src="img/accordeoniste_soiree.JPG" alt="Accordéoniste pour vos soirées">
-
-					<p style="margin-top: 15px;">
+					<p style="margin-bottom: 15px;">
 						<a href="{{ path('contact') }}" class="btn btn-primary">
 							Une question ? Un devis ? Contactez-moi ! <br>
 							dutheil.jeremy@gmail.com / 06.85.38.22.16
 						</a>
 					</p>
+
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CjtwtX3Sd8Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="col-md-12">
+					<p style="margin-top: 15px;">
+						Avec une formule en solo, l'organisation de votre événement est grandement simplifiée ; les conditions techniques sont réduites au minimum, et il n'y a pas besoin de sonorisation la plupart du temps. Si cela s'avère nécessaire, je suis autonome et possède mon propre matériel de diffusion. L'espace nécessaire se résume à une chaise, qui peut se déplacer au cours de la soirée afin d'animer différents espaces.. (<i>Attention, je joue uniquement assis et ne propose donc pas de déambulation à proprement parler.</i>)
+					</p>
+
 					<p>
-						Si vous cherchez une formation musicale plus fournie, je vous propose de regarder notre <a href="{{ path('manouche') }}">groupe de jazz manouche</a>, avec lequel nous proposons des formules du duo (accordéon / guitare) au quartet (accordéon / 2 guitares / contrebasse).
+						Si vous cherchez une formation musicale plus fournie, je vous propose de regarder notre <a href="{{ path('manouche') }}">groupe de jazz manouche</a>, avec lequel nous proposons des formules du duo (accordéon / guitare) au quartet (accordéon / 2 guitares / contrebasse). Vous pouvez aussi consulter la page des <a href="{{ path('animations') }}">animations musicales</a>, où vous trouverez également des formules avec chanteur ou chanteuse.
 					</p>
 				</div>
 			</div>
@@ -97,9 +99,17 @@ drift.load('beeybihz4kn4');
 
 			<h2 class="section-title section-title--small">Des styles musicaux variés</h2>
 
-			<p>
-				L'accordéon, tout comme le piano, est un instrument parfaitement adapté à l'expression musicale en solo ; riche et complexe, il permet à l'accordéoniste non seulement de jouer les mélodies, mais également de s'accompagner soi-même. Souvent rangé dans la case "<i>musette</i>", on peut pourtant l'entendre dans de nombreux styles musicaux dans lesquels il s'intègre parfaitement. Choisir un <strong>accordéoniste pour votre soirée</strong> vous permettra d'offrir un répertoire complet et varié à vos invités.
-			</p>
+			<div class="row">
+				<div class="col-md-6">
+					<img class="img-fluid" src="img/accordeoniste_soiree.JPG" alt="Accordéoniste pour vos soirées" style="margin-bottom: 15px;">
+				</div>
+
+				<div class="col-md-6">
+					<p>
+						L'accordéon, tout comme le piano, est un instrument parfaitement adapté à l'expression musicale en solo ; riche et complexe, il permet à l'accordéoniste non seulement de jouer les mélodies, mais également de s'accompagner soi-même. Souvent rangé dans la case "<i>musette</i>", on peut pourtant l'entendre dans de nombreux styles musicaux dans lesquels il s'intègre parfaitement. Choisir un <strong>accordéoniste pour votre soirée</strong> vous permettra d'offrir un répertoire complet et varié à vos invités.
+					</p>
+				</div>
+			</div>
 
 			<h3 class="section-title section-title--smaller">Accordéon jazz : classe et élégance</h3>
 
@@ -108,7 +118,7 @@ drift.load('beeybihz4kn4');
 			</p>
 
 			<p>
-				Discret, l'accordéon jazz apportera à votre soirée une touche de classe et d'élégance, tout en surprenant vos invités ! Cette formule est particulièrement adaptée pour le vin d'honneur de votre mariage, ou pour le cocktail de votre entreprise... Loin des clichés de l'instrument, un <strong>accordéoniste jazz</strong> plaira à toutes les générations !
+				Discret, l'accordéon jazz apportera à votre soirée une touche de classe et d'élégance, tout en surprenant vos invités ! Cette formule est particulièrement adaptée pour le cocktail de votre entreprise, un dîner spécial dans votre restaurant ou le vin d'honneur de votre mariage... Loin des clichés de l'instrument, un <strong>accordéoniste jazz</strong> plaira à toutes les générations !
 			</p>
 
 			<div class="row justify-content-center" style="margin-bottom: 20px;">
