--- a/templates/pages/groupe_jazz_manouche_mariage_paris.html.twig
+++ b/templates/pages/groupe_jazz_manouche_mariage_paris.html.twig
@@ -30,7 +30,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<p>
-						Vous préparez votre mariage (ou l'organisez pour des clients), et vous cherchez un <strong><a href="{{ path('manouche') }}">groupe de jazz manouche</a></strong> pour animer celui-ci en musique ? Du vin d'honneur au repas, découvrez nos formules qui raviront à coup sûr vos invités !
+						Vous préparez votre mariage (ou l'organisez pour des clients), et vous cherchez un <strong><a href="{{ path('manouche') }}" style="color: #555555;">groupe de jazz manouche</a></strong> pour animer celui-ci en musique ? Du vin d'honneur au repas, découvrez nos formules qui raviront à coup sûr vos invités !
 					</p>
 
 					<p>
@@ -50,7 +50,7 @@
 					<img class="img-fluid" src="img/manouchebg.jpg" alt="Groupe jazz manouche avec accordéon">
 
 					<p>
-						<a href="{{ path('contact') }}" class="btn btn-primary" style="margin-top: 15px;">Contactez nous !</a>
+						<a href="{{ path('contact') }}" class="btn btn-primary" style="margin-top: 15px;">Contactez nous pour un devis gratuit ! <br>dutheil.jeremy@gmail.com / 06.85.38.22.16</a>
 					</p>
 				</div>
 			</div>
@@ -70,18 +70,6 @@
             </p>
 
 			<div class="row">
-				<div class="col-md-6" style="margin-bottom: 15px;">
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/BGGrRG-q4VU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					</div>
-				</div>
-
-				<div class="col-md-6" style="margin-bottom: 15px;">
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CWUY-repj8g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					</div>
-				</div>
-
 				<div class="col-md-6" style="margin-bottom: 15px;">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/u8re-Ba8RQ0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
