--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -58,7 +58,7 @@ drift.load('beeybihz4kn4');
 			</h1>
 
 			<p>
-				<a href="{{ path('contact') }}" class="btn btn-primary">Contactez nous pour un devis gratuit</a>
+				<a href="{{ path('contact') }}" class="btn btn-primary">Contactez nous pour un devis gratuit <br> dutheil.jeremy@gmail.com / 06.85.38.22.16</a>
 			</p>
 
 			<p>
@@ -68,6 +68,18 @@ drift.load('beeybihz4kn4');
 			<p>
 				Nous nous produisons aussi bien lors de concerts en public (voir notre page <a href="{{ path('jdsp') }}">Jérémy Dutheil & Solal Poux</a>), que lors d'<strong>événements d'entreprise et soirées privées</strong>. Vous trouverez sur cette page de nombreuses vidéos de notre groupe jazz manouche, ainsi que <a href="#reviews">des avis</a> qui décrivent la qualité de nos animations musicales.
 			</p>
+
+			<div class="row">
+                <div class="col-md-12">
+					<div class="embed-responsive embed-responsive-16by9">
+                    	<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CXq4DWhwqSU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+
+                    <p class="text-center" style="margin-top: 15px;">
+                        Quelques extraits en trio jazz manouche : Bossa Dorado, Autumn Leaves, All of Me, All the things you are, Fly me to the Moon
+                    </p>
+                </div>
+            </div>
 
 			<!--<div class="row">
 				<div class="col-md-6" style="margin-bottom: 15px;">
