--- a/templates/pages/videos.html.twig
+++ b/templates/pages/videos.html.twig
@@ -11,7 +11,7 @@
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
-			<img src="img/videos-pic.jpg" alt="" class="flash-item__background flash-item__background--groupes">
+			<img src="img/videos-new.jpg" alt="" class="flash-item__background flash-item__background--groupes">
 		</div>
 	</section>
 
@@ -19,13 +19,54 @@
 
 	<section class="content-section bg--blank page-section">
 		<div class="container">
-			<h1 class="section-title">Vidéos</h1>
+			<h1 class="section-title">Vidéos <small>accordéon jazz & chanson</small></h1>
 
 			<p>
-				Découvrez mon répertoire en solo, ou au sein de mes différents projets, avec quelque vidéos ci-dessous ; l'ensemble de mes vidéos en ligne est disponible sur <a href="https://www.youtube.com/channel/UCTHC327qYeB34ri8Fgzubjw" target="_blank">ma page Youtube</a>.
+				Accordéoniste jazz & chanson, je vous invite à découvrir mon répertoire en solo ou accompagné d'autres musiciens. L'ensemble de mes vidéos d'accordéon est disponible en ligne sur <a href="https://www.youtube.com/channel/UCTHC327qYeB34ri8Fgzubjw" target="_blank">ma page Youtube</a>.
 			</p>
 
-			<h2 class="section-title section-title--small">Jérémy Dutheil & Solal Poux : duo jazz manouche accordéon / guitare</h2>
+			<div class="row">
+				<div class="col-md-12">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-h2oJAjzAtg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+
+			<h2 class="section-title section-title--small" style="margin-top: 20px;">Accordéon jazz et valses swing - en solo</h2>
+
+			<p>
+				Mon répertoire de prédilection, que je propose en solo à l'accordéon : jazz (standards, manouche, ...) et valses swing (Privat, Viseur, ...) !
+			</p>
+
+			<div class="row">
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-h2oJAjzAtg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mv3DgoYPCds" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/oSiWQ_thsn8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6" style="margin-bottom: 15px;">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/od3lmo26AaE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+
+				</div>
+			</div>
+
+			<h2 class="section-title section-title--small" style="margin-top: 20px;">Jérémy Dutheil & Solal Poux : duo jazz manouche accordéon / guitare</h2>
 
 			<p>
 				En duo avec l'excellent guitariste Solal Poux, nous proposons un répertoire axé principalement sur le <strong>jazz manouche</strong> ; les compositions de Django Reinhardt sont mises en avant, même si on retrouve également des morceaux issu du répertoire jazz plus traditionnel. <br>
@@ -102,24 +143,23 @@
 				<a href="{{ path('manouche') }}" class="btn btn-primary">Plus d'informations <span class="d-none d-md-inline">sur le groupe jazz manouche</span></a>
 			</p>
 
-			<h2 class="section-title section-title--small">Solo</h2>
+			<h2 class="section-title section-title--small">Accordéon solo - Esprit guinguette</h2>
 
 			<p>
-				Mon répertoire solo s'axe autour du jazz et de la chanson française, autour de standards et d'autres morceaux moins connus ; une formule très adaptable, disponible en acoustique ou sonorisé, possibilité de déambulations, ...
+				Un aperçu de mon répertoire solo dans un esprit guinguette : swing, chanson française et valses ! Il s'agit d'une formule très adaptable, disponible en acoustique ou sonorisé, appropriée aux petits espaces ou ambiances champêtres...
 			</p>
 
 
-
             <div class="row">
-                <div class="col-md-6">
+				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
-                    	<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/od3lmo26AaE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/oSiWQ_thsn8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
 
 				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mv3DgoYPCds" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    	<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/od3lmo26AaE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
             </div>
@@ -181,6 +221,14 @@
 			<p>
 				Plus complets, ces enregistrements ont été réalisés en studio ; forcément moins spontanés qu'en <i>live</i>, mais avec des arrangements préparés et pour la plupart des CDs disponibles physiquement.
 			</p>
+
+			<!--<div class="row">
+				<div class="col-md-12">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe scrolling="no" frameborder="0" allowTransparency="true" src="https://www.deezer.com/plugins/player?format=classic&autoplay=false&playlist=false&width=700&height=350&color=ff0000&layout=dark&size=medium&type=radio&id=artist-85885612&app_id=1" class="embed-responsive-item"></iframe>
+					</div>
+				</div>
+			</div>-->
 
             <div class="row">
                 <div class="col-md-12">
