--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -171,6 +171,10 @@
                         </li>
 
                         <li class="nav-item">
+                            <a title="Retrouvez moi sur Spotify" style="font-size: 24px;" class="nav-link" href="https://open.spotify.com/album/5h6OhuDtbu3D2M9kl1QRoV" target="_blank"><i class="fab fa-spotify"></i></a>
+                        </li>
+
+                        <li class="nav-item">
                             <a title="Retrouvez moi sur Soundcloud" rel="nofollow" style="font-size: 24px;" class="nav-link" href="https://soundcloud.com/j-r-my-dutheil/" target="_blank"><i class="fab fa-soundcloud"></i></a>
                         </li>
                     </ul>
@@ -192,7 +196,11 @@
 
                 <p class="contact-txt" style="margin-top: 10px;">
                     <a title="Retrouvez moi sur Facebook" style="font-size: 24px; color: #FFFFFF; margin-right: 10px;" href="https://www.facebook.com/jeremydutheilaccordeoniste/" target="_blank" ><i class="fab fa-facebook"></i></a>
-                    <a title="Retrouvez moi sur Youtube" style="font-size: 24px; color: #FFFFFF; margin-right: 10px;" href="https://www.youtube.com/channel/UCTHC327qYeB34ri8Fgzubjw" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a title="Retrouvez moi sur Youtube" style="font-size: 24px; color: #FFFFFF; " href="https://www.youtube.com/channel/UCTHC327qYeB34ri8Fgzubjw" target="_blank"><i class="fab fa-youtube"></i></a>
+
+                    <a title="Retrouvez moi sur Deezer" style="font-size: 24px; color: #FFFFFF;" href="https://www.deezer.com/album/131652802" target="_blank"><img src="{{ asset('img/deezer.png') }}" alt="" style="height: 50px;"</a>
+                    <a title="Retrouvez moi sur Spotify" style="font-size: 24px; color: #FFFFFF; margin-right: 10px;" href="https://open.spotify.com/album/5h6OhuDtbu3D2M9kl1QRoV" target="_blank"><i class="fab fa-spotify"></i></a>
+
                     <a title="Retrouvez moi sur Soundcloud" style="font-size: 24px; color: #FFFFFF;" href="https://soundcloud.com/j-r-my-dutheil/" target="_blank"><i class="fab fa-soundcloud"></i></a>
                     <!--<a title="Retrouvez moi sur LiveTonight" style="" href="https://livetonight-dot-yamm-track.appspot.com/Redirect?ukey=1nGcsuKOZ27OLxDe8NWFrLO7Wfs4w5z_JPHRm1X_ZDB8-993220127&key=YAMMID-22322822&link=https%3A%2F%2Fwww.livetonight.fr%2Fgroupe-musique-dj%2F3484-jeremy-dutheil" target="_blank"><img style="height: 20px; vertical-align: -2px; margin-left: 10px;" src="img/livetonight.png"></a>-->
                 </p>
@@ -201,6 +209,10 @@
 
                 <p class="text-center" style="font-size: 14px; ">
                     <a style="color: #FFFFFF;" href="{{ path('mentions_legales') }}">Mentions légales</a> <!-- - <a href="{{ path('accordeoniste_soiree') }}" style="color: #ffffff;">Accordéoniste pour votre soirée</a> - <a href="{{ path('musiciens_soirees') }}" style="color: #ffffff;">Groupe de musique pour votre soirée</a> -->
+                    -
+                    <a style="color: #ffffff;" href="https://www.facebook.com/haliephotographie/" target="_blank">Halie Photographie</a>
+                    -
+                    <a style="color: #ffffff;" href="http://www.monsieuraccordeon.com/" target="_blank">Monsieur Accordéon</a>
                 </p>
             </div>
         </section>
