--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -213,6 +213,8 @@
                     <a style="color: #ffffff;" href="https://www.facebook.com/haliephotographie/" target="_blank">Halie Photographie</a>
                     -
                     <a style="color: #ffffff;" href="http://www.monsieuraccordeon.com/" target="_blank">Monsieur Accordéon</a>
+                    <br>
+                    Jérémy utilise et recommande <a href="http://www.prodipe.com/" style="color: #ffffff;" target="_blank">le matériel Prodipe</a>.
                 </p>
             </div>
         </section>
