--- a/templates/pages/jdsp.html.twig
+++ b/templates/pages/jdsp.html.twig
@@ -12,7 +12,7 @@
 
 <section class="flash flash--limited">
     <div class="flash-item">
-        <img src="img/jdsp.png" alt="Jérémy Dutheil & Solal Poux" class="flash-item__background">
+        <img src="img/jdsp-com.jpg" alt="Jérémy Dutheil & Solal Poux" class="flash-item__background" style="top: -300px;">
     </div>
 </section>
 
@@ -20,12 +20,25 @@
 
 <section class="content-section bg--blank page-section">
     <div class="container bg--blank">
-        <img class="img-responsive" src="img/dates_fev_2020.png">
-
         <h1 class="section-title" style="margin-top: 25px;">
             Jérémy Dutheil & Solal Poux
             <small>Jazz manouche avec accordéon</small>
         </h1>
+
+        <div class="row">
+            <div class="col-md-12">
+                <img class="img-fluid" src="img/dates_fev_2020.png">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <p style="margin-top: 15px;">
+                    Retrouvez l'ensemble des dates (à jour) dans la rubrique <a href="{{ path('agenda') }}">CONCERTS</a>. Notre premier album est disponible sur les plateformes numériques : <a href="https://lnkfi.re/jdsp" target="_blank">cliquez ici</a> pour l'écouter.
+                </p>
+            </div>
+        </div>
+
 
         <p>
             Autour du jazz manouche, Jérémy Dutheil & Solal Poux proposent un duo original : accordéon et guitare. Une formule musicale dépouillée qui offre une énergie brute, sans superflu. Le répertoire fait la part belle aux standards de Django Reinhardt, mais s’octroie également quelques incursions dans d’autres univers (chanson française, jazz). De Swing 42 à Ménilmontant, en passant par Daphné ou Billie’s Bounce, un concert guidé par un fil conducteur : le swing !
@@ -58,7 +71,7 @@
         </div>
 
         <p style="margin-top: 15px;">
-            Jérémy Dutheil & Solal Poux se produisent du duo (accordéon / guitare) au quartet (accordéon / 2 guitares / contrebasse), dans toute la France. Vous trouverez l'ensemble des dates programmées dans la rubrique <a href="{{ path('agenda') }}">"Concerts"</a>.
+            Jérémy Dutheil & Solal Poux se produisent du duo (accordéon / guitare) au quartet (accordéon / 2 guitares / contrebasse), dans toute la France. Ils sont également disponibles pour des soirées privées (entreprise / particuliers) sur Paris ou Ile de France, avec leur <a href="{{ path('manouche') }}">groupe de jazz manouche</a>.
         </p>
     </div>
 </section>
