--- a/templates/pages/accordeoniste_soiree.html.twig
+++ b/templates/pages/accordeoniste_soiree.html.twig
@@ -46,11 +46,11 @@ drift.load('beeybihz4kn4');
 
 	<section class="flash flash--limited">
 		<div class="flash-item">
-			<img src="img/flash-item-1.jpg" alt="" class="flash-item__background">
+			<img src="img/solo-anims-paris.jpg" alt="" class="flash-item__background" style="top: -330px;">
 		</div>
 	</section>
 
-	<section class="flash-ghost flash-ghost--limited" style="height: 350px !important;"></section>
+	<section class="flash-ghost " ></section>
 
 	<section class="content-section bg--blank page-section">
 		<div class="container">
@@ -124,7 +124,7 @@ drift.load('beeybihz4kn4');
 			<div class="row justify-content-center" style="margin-bottom: 20px;">
 				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mv3DgoYPCds" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-h2oJAjzAtg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
 
@@ -249,7 +249,7 @@ drift.load('beeybihz4kn4');
 
 				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/od3lmo26AaE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/oSiWQ_thsn8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
